force-app/main/default/objects/jobTriggerMapping__mdt.object
<CustomObject>
    <description>Created to generic mapping of the staging tables to target objects</description>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Field__c</fullName>
        <label>Source Field</label>
        <metadataRelationshipControllingField>jobTriggerMapping__mdt.Source_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>jobTriggerMapping</relationshipLabel>
        <relationshipName>jobTriggerMapping</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <label>Source Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>jobTriggerMapping</relationshipLabel>
        <relationshipName>jobTriggerMapping</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Target_Field__c</fullName>
        <label>Target Field</label>
        <metadataRelationshipControllingField>jobTriggerMapping__mdt.Target_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>jobTriggerMapping1</relationshipLabel>
        <relationshipName>jobTriggerMapping1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Target_Object__c</fullName>
        <label>Target Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>jobTriggerMapping1</relationshipLabel>
        <relationshipName>jobTriggerMapping1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>jobTriggerMapping</label>
    <pluralLabel>jobTriggerMapping</pluralLabel>
</CustomObject>